css/styles.css
.navbar{
    position: fixed;
    height: 10vh;
    top:0px; right:0px; left:0px;
}

section{
    display: flex;
    width: 100%;
    min-height: 80vh;
    background: black;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 10%;
}
.container-fluid > h1{
    padding: 15px;
    color: white;
    text-align: center;
}

.container-fluid > p{
    padding: 15px;
    color: white;
    text-align: center;
}

.container-fluid{
    display: flex;  
    width: 75%;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

section:nth-child(3){
    background-color: yellow;
}

section:nth-child(4){
    background-color: green;
    height: 100vh;   
}

.card{
    margin:45px;
}

.row{
    flex-direction: row;
}

